force-app/main/default/objects/sugati__Room_Allocation_Column__c/sugati__Room_Allocation_Column__c.object-meta.xml
<CustomObject>
    <label>Room Allocation Column</label>
    <nameField>
        <displayFormat>RAC-{00000}</displayFormat>
        <label>Room Allocation Column Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Allocation Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>