force-app/main/default/objects/sugati__Room_Allocation_Column__c/fields/sugati__RAC_Column_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAC_Column_Type__c</fullName>
    <label>Column Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Room Type</fullName>
            </value>
            <value>
                <fullName>Room Gender</fullName>
            </value>
            <value>
                <fullName>Occupants</fullName>
            </value>
            <value>
                <fullName>Occupancy</fullName>
            </value>
            <value>
                <fullName>Room Number</fullName>
            </value>
            <value>
                <fullName>Release Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>