force-app/main/default/objects/sugati__Room_Allocation_Column__c/fields/sugati__RAC_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAC_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Room Allocation Columns</relationshipLabel>
    <relationshipName>Room_Allocation_Columns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>