force-app/main/default/objects/sugati__Room_Allocation_Column__c/fields/sugati__RAC_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__RAC_Order__c</fullName>
    <label>Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>